--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,8 @@ cfg-if = "1.0.0"
 modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
 bitflags = "1.3.2"
 spin = "0.9.4"
+num-traits = {version = "0.2", default-features = false }
+num-derive = "0.3"
 
 [features]
 qemu_debug = []
