--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,18 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+devices = { path = "./devices" }
+
 log = { version = "0.4", features=["release_max_level_trace"] }
 uefi = { version = "0.16.0", features = [] }
 static_assertions = "1.1.0"
-devices = { path = "./devices" }
 cfg-if = "1.0.0"
 modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
-bitflags = "1.3.2"
 spin = "0.9.4"
 num-traits = {version = "0.2", default-features = false }
 num-derive = "0.3"
 
-[features]
-qemu_debug = []
+tock-registers = "0.8"
+cortex-a = "8.0"  
 
+[features]
 default = ["qemu_debug"]
+qemu_debug = []
