--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,8 +12,10 @@ static_assertions = "1.1.0"
 cfg-if = "1.0.0"
 modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
 spin = "0.9.4"
+lock_api = "0.4"
 num-traits = { version = "0.2", default-features = false }
 num-derive = "0.3"
+crossbeam-utils = { version = "0.8.12", default-features = false }
 
 tock-registers = "0.8"
 cortex-a = "8.0"  
