--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "rust-analyzer.cargo.target": "aarch64-unknown-uefi",
     "rust-analyzer.checkOnSave.allTargets": false,
     "rust-analyzer.procMacro.attributes.enable": true,
-    "rust-analyzer.diagnostics.disabled": ["unresolved-proc-macro"]
+    "rust-analyzer.diagnostics.disabled": ["unresolved-proc-macro"],
+    "rust-analyzer.cargo.target": "aarch64-unknown-none",
+    "rust-analyzer.checkOnSave.overrideCommand": ["make", "check"],
 }
