--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = { version = "0.4", features=["release_max_level_trace"] }
+log = { workspace = true }
 uefi = { version = "0.16.0", features = [] }
 static_assertions = "1.1.0"
 cfg-if = "1.0.0"
@@ -16,9 +16,12 @@ lock_api = "0.4"
 num-traits = { version = "0.2", default-features = false }
 num-derive = "0.3"
 crossbeam-utils = { version = "0.8.12", default-features = false }
+elf = { version = "0.7.0", default-features = false }
 
 tock-registers = "0.8"
-cortex-a = "8.0"  
+cortex-a = "8.0"
+
+module = { path = "../libs/module", features = ["kernel"] }
 
 [features]
 default = ["qemu_debug", "logger_cpu_id"]
