--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.check.allTargets": false,
     "rust-analyzer.procMacro.attributes.enable": true,
     "rust-analyzer.diagnostics.disabled": ["unresolved-proc-macro"],
     "rust-analyzer.cargo.target": "aarch64-unknown-none",
-    "rust-analyzer.checkOnSave.overrideCommand": ["make", "check"],
+    "rust-analyzer.check.overrideCommand": ["make", "check"],
 }
