--- a/tools/module-postlinker/Cargo.toml
+++ b/tools/module-postlinker/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+
+[workspace]
+
 [dependencies]
 object = {version = "0.30.2", features = ["write"]}
