--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -24,6 +24,7 @@ elf = { version = "0.7.0", default-features = false }
 tock-registers = "0.8"
 cortex-a = "8.0"
 hashbrown = "0.13.2"
+thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
 
 [features]
 default = ["qemu_debug", "logger_cpu_id"]
