--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
+path = "src/kernel.rs"
 crate-type = ["lib", "staticlib"]
 
 [dependencies]
@@ -25,6 +26,7 @@ tock-registers = "0.8"
 cortex-a = "8.0"
 hashbrown = "0.13.2"
 thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+bitflags = "1.3.2"
 
 [features]
 default = ["qemu_debug", "logger_cpu_id"]
