--- a/tools/builder/Cargo.toml
+++ b/tools/builder/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 ar = "0.9.0"
 cargo_toml = "0.14.0"
+clap = { version = "4.3.8", features = ["derive"] }
 console = "0.15.5"
 indicatif = "0.17.3"
 lazy_static = "1.4.0"
