NVMe driver and lot of other things

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,6 +43,10 @@
                 {
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
+                },
+                {
+                    "text": "set print asm-demangle on",
+                    "ignoreFailures": true
                 }
             ]
         }
