--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -27,6 +27,7 @@ cortex-a = "8.0"
 hashbrown = "0.13.2"
 thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
 bitflags = "1.3.2"
+memoffset = "0.9.0"
 
 [features]
 default = ["qemu_debug", "logger_cpu_id"]
