--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,7 +14,7 @@ log = { workspace = true }
 uefi = { version = "0.16.0", features = [] }
 static_assertions = "1.1.0"
 cfg-if = "1.0.0"
-modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
+modular-bitfield = "0.11.2"
 spin = "0.9.4"
 lock_api = "0.4"
 num-traits = { version = "0.2", default-features = false }
