--- a/loader/Cargo.toml
+++ b/loader/Cargo.toml
@@ -11,6 +11,6 @@ uefi = { version = "0.16.0", features = ["exts", "logger"] }
 uefi-services = { version = "0.13.0", features = ["no_panic_handler"] }
 cfg-if = "1.0.0"
 static_assertions = "1.1.0"
-modular-bitfield = { git = "https://github.com/ChefKissInc/modular-bitfield" }
+modular-bitfield = "0.11.2"
 elfloader = "0.16.0"
 anyhow = { version = "1.0", default-features = false }
