--- a/loader/Cargo.toml
+++ b/loader/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
 name = "loader"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
-uefi = { version = "0.16.0", features = ["exts", "logger"] }
-uefi-services = { version = "0.13.0", features = ["no_panic_handler"] }
+uefi = { version = "0.36.1", features = ["logger", "log-debugcon", "alloc", "global_allocator"] }
 cfg-if = "1.0.0"
 static_assertions = "1.1.0"
-modular-bitfield = "0.11.2"
+modular-bitfield = "0.13.0"
 elfloader = "0.16.0"
 anyhow = { version = "1.0", default-features = false }
